apps/subsystems/downloaders/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: downloaders
  labels:
    app.kubernetes.io/name: radarr
  annotations:
    secret.reloader.stakater.com/reload: ${db_name:=downloaders-db}-${db_suffix_current:=default}-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: radarr
        image: ghcr.io/linuxserver/radarr:6.4.4@sha256:7dfd049e79c00b16fbc29c3f5d96a9e7b9e73a23930b4c5b3c4541d60b366814
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /ping
            port: 7878
        ports:
        - name: radarr
          containerPort: 7878
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ping
            port: 7878
        resources:
          requests:
            cpu: 15m
            memory: 298Mi
        securityContext:
          capabilities:
            add:
            - CHOWN
            - SETGID
            - SETUID
            drop:
            - ALL
        volumeMounts:
        - mountPath: /config
          name: radarr-data
        - mountPath: /data
          name: radarr-media
        - mountPath: /config/logs
          name: radarr-logs
        - mountPath: /tmp
          name: radarr-temp
      volumes:
      - name: radarr-data
        persistentVolumeClaim:
          claimName: radarr-data
      - name: radarr-media
        persistentVolumeClaim:
          claimName: media
      - name: radarr-logs
        emptyDir: {}
      - name: radarr-temp
        emptyDir: {}
