apps/subsystems/downloaders/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: downloaders
  labels:
    app.kubernetes.io/name: radarr
spec:
  selector:
    app.kubernetes.io/name: radarr
  ports:
  - name: radarr
    port: 7878
    targetPort: radarr
    protocol: TCP
  type: ClusterIP
